# proyecto_el5206

./: .gitignore  README.md  model_trainer.ipynb  requirements.txt
football_player/: package.xml  setup.cfg  setup.py
football_player/football_player/: error_plotter.py  follow_and_avoid.py  yolo_detector_node.py
football_player/launch/: football_player.launch.py
football_player/params/: controller_gains.yaml
pioneer_bringup/: CMakeLists.txt  README.md  package.xml
pioneer_bringup/launch/robot/: pioneer_basic.launch.py
pioneer_core/: README.md
pioneer_core/pioneer_base/: CMakeLists.txt  package.xml
pioneer_core/pioneer_base/launch/: rosaria2.launch.py
pioneer_core/pioneer_base/params/: pioneer.yaml
pioneer_core/pioneer_joy/: CMakeLists.txt  package.xml
pioneer_core/pioneer_joy/launch/: joystick.launch.py
pioneer_core/pioneer_joy/params/: joystick.yaml
