<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>pioneer_base</name>
    <version>2.0.0</version>
    <description>ROS2 driver for Pioneer P3-DX2 robot platform</description>
    <author email="rprocha@isr.uc.pt">Rui P. Rocha</author>
    <author email="joao@todo.todo">João André</author>
    <maintainer email="rprocha@isr.uc.pt">Rui P. Rocha</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <depend>rclcpp</depend>
    <depend>geometry_msgs</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>std_srvs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>


    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
